my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EFORMAT/T_EFORMAT-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_EFORMAT_STRUCT_H
#define T_EFORMAT_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_EFORMAT(void);


#endif /* not T_EFORMAT_STRUCT_H */
